// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept placeholder 1`] = `
.emotion-2 {
  line-height: 1.5;
}

.emotion-0 {
  font-weight: bold;
}

.emotion-1:empty::before {
  content: "No value";
  color: #696979;
  font-style: italic;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      Test
    </div>
    <div
      class="emotion-1"
    />
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-2 {
  line-height: 1.5;
}

.emotion-0 {
  font-weight: bold;
}

.emotion-1:empty::before {
  content: "-";
  color: #696979;
  font-style: italic;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      Test
    </div>
    <div
      class="emotion-1"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`should render correctly 2`] = `
.emotion-2 {
  line-height: 1.5;
}

.emotion-0 {
  font-weight: bold;
  color: red;
}

.emotion-1 {
  color: blue;
}

.emotion-1:empty::before {
  content: "-";
  color: #696979;
  font-style: italic;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      Test
    </div>
    <div
      class="emotion-1"
    >
      Content
    </div>
  </div>
</div>
`;
